--- a/src/developerTools/electronApp/index.html
+++ b/src/developerTools/electronApp/index.html
@@ -27,8 +27,8 @@
 
             <div class="flexItem" style="border: solid 1px blue;">
                 <div id="idCursorTypeContainer"></div>
-                <button id="zoomIn"> Zoom in</button>
-                <button id="zoomOut">Zoom out</button>
+                <button id="zoomIn"> Zoom in (key: 2)</button>
+                <button id="zoomOut">Zoom out (key: 2)</button>
             </div>
 
             <div>
@@ -37,6 +37,8 @@
                 y: <input id="cameraBoundsY" type="number">
                 width: <input id="cameraBoundsWidth" type="number">
                 height: <input id="cameraBoundsHeight" type="number">
+                <button id="toggleCameraBounds">toggle camera bounds (key: c)</button>
+                <button id="toggleGrid">toggle grid (key: g)</button>
             </div>
 
             <div>
