--- a/src/developerTools/electronApp/index.html
+++ b/src/developerTools/electronApp/index.html
@@ -7,6 +7,28 @@
         <link rel="stylesheet" href="vex.css" />
         <link rel="stylesheet" href="vex-theme-os.css" />
 
+        <style>
+            @font-face {
+                font-family: "Inconsolata_ExtraCondensed-Light";
+                src: url("./resources/fonts/Inconsolata_ExtraCondensed-Light.ttf");
+            }
+            @font-face {
+                font-family: "CrimsonPro-ExtraLight";
+                src: url("./resources/fonts/CrimsonPro-ExtraLight.ttf");
+            }
+            @font-face {
+            font-family: "CrimsonPro-Black";
+            src: url("./resources/fonts/CrimsonPro-Black.ttf");
+            }
+            @font-face {
+                font-family: "smallburg-Regular";
+                src: url("./resources/fonts/smallburg-Regular.ttf");
+            }
+            @font-face {
+                font-family: "DungeonFont";
+                src: url("./resources/fonts/DungeonFont.ttf");
+            }
+        </style>
     </head>
     <body>
 
@@ -43,21 +65,25 @@
 
             <div>
                 background Color: <input id="backgroundColorInput" type="text">
+                <div id="objectNameContainer" style="display:inline;"></div>
+                <div id="mousePositionContainer" style="display:inline;"></div>
             </div>
             
             <div id="canvasAndFilesCon" class="flexContainerhori takeAllSpace">
                 <div class="flexItem" style="flex-direction: column;">
-                    Objects:
-                    <div id="fileSystemObjects"></div>
-                    Rooms:
-                    <div id="fileSystemRoom"></div>
-                    Resources:
-                    <div id="fileSystemResources"></div>
-                    Layers:
-                    <button id="createLayerButton">create layer</button>
-                    <button id="removeLayerButton">remove layer</button>
-                    <div id="layerContainer">
+                    <div style="overflow-y:scroll;">
+                        Objects:
+                        <div id="fileSystemObjects"></div>
+                        Rooms:
+                        <div id="fileSystemRoom"></div>
+                        Resources:
+                        <div id="fileSystemResources"></div>
+                        Layers:
+                        <button id="createLayerButton">create layer</button>
+                        <button id="removeLayerButton">remove layer</button>
+                        <div id="layerContainer">
 
+                        </div>
                     </div>
                 </div>
                 
@@ -82,8 +108,11 @@
 
             hideCreateSprites();
         </script>
+        <script src="./fontfaceobserver.standalone.js"></script>
         <script src="./howler.min.js"></script>
         <script src="./pixi.min.js"></script>
+        <script src="./pixi-filters.js"></script>
+        <script src="./pixi-particles.min.js"></script>
         <script src="./prettyFileSystem.min.js"></script>
         <script src="./lz-string.min.js"></script>
         <script src="./index.js"></script>
