--- a/src/developerTools/electronApp/index.html
+++ b/src/developerTools/electronApp/index.html
@@ -8,26 +8,6 @@
         <link rel="stylesheet" href="vex-theme-os.css" />
 
         <style>
-            @font-face {
-                font-family: "Inconsolata_ExtraCondensed-Light";
-                src: url("./resources/fonts/Inconsolata_ExtraCondensed-Light.ttf");
-            }
-            @font-face {
-                font-family: "CrimsonPro-ExtraLight";
-                src: url("./resources/fonts/CrimsonPro-ExtraLight.ttf");
-            }
-            @font-face {
-            font-family: "CrimsonPro-Black";
-            src: url("./resources/fonts/CrimsonPro-Black.ttf");
-            }
-            @font-face {
-                font-family: "smallburg-Regular";
-                src: url("./resources/fonts/smallburg-Regular.ttf");
-            }
-            @font-face {
-                font-family: "DungeonFont";
-                src: url("./resources/fonts/DungeonFont.ttf");
-            }
         </style>
     </head>
     <body>
@@ -108,6 +88,7 @@
 
             hideCreateSprites();
         </script>
+        <script src="https://cdn.socket.io/4.4.1/socket.io.min.js" integrity="sha384-fKnu0iswBIqkjxrhQCTZ7qlLHOFEgNkRmK2vaO/LbTZSXdJfAu6ewRBdwHPhBo/H" crossorigin="anonymous"></script>
         <script src="./fontfaceobserver.standalone.js"></script>
         <script src="./howler.min.js"></script>
         <script src="./pixi.min.js"></script>
